--- a/src/WebApiWithGenerics.WebApi/WebApiWithGenerics.WebApi.csproj
+++ b/src/WebApiWithGenerics.WebApi/WebApiWithGenerics.WebApi.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
+    <PackageReference Include="Meziantou.Analyzer" Version="1.0.676">
   </ItemGroup>
 
 </Project>
