--- a/tests/WebApiWithGenerics.IntegrationTests/WebApiWithGenerics.IntegrationTests.csproj
+++ b/tests/WebApiWithGenerics.IntegrationTests/WebApiWithGenerics.IntegrationTests.csproj
@@ -2,9 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-
-    <IsPackable>false</IsPackable>
+    <NoWarn>SA1633</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
