--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 6.0.x
+          dotnet-version: 6.x.x
 
       - name: Build sources
         run: dotnet build -c Release
