--- a/src/WebApiWithGenerics.WebApi/WebApiWithGenerics.WebApi.csproj
+++ b/src/WebApiWithGenerics.WebApi/WebApiWithGenerics.WebApi.csproj
@@ -16,6 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="MySqlConnector" Version="2.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
     <PackageReference Include="Meziantou.Analyzer" Version="1.0.676">
