add configuration to appsettings.json

--- a/src/WebApiWithGenerics.WebApi/appsettings.json
+++ b/src/WebApiWithGenerics.WebApi/appsettings.json
@@ -1,10 +1,30 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {SourceContext} - {Level}] {Message:lj}{NewLine}{Exception}",
+          "theme": "Serilog.Sinks.SystemConsole.Themes.SystemConsoleTheme::Literate, Serilog.Sinks.Console"
+        }
+      }
+    ]
+  },
+  "OpenApiInfo": {
+    "Title": "WebApiSample",
+    "Version": "v1",
+    "OpenApiContact": {
+      "Name": "Timo Heller",
+      "Email": "timo.heller@5minds.de"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "server=localhost;userid=root;pwd=root;port=3306;database=mydb"
+  }
 }
